--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -1,6 +1,28 @@
 .App {
   text-align: center;
+  display: flex
 }
+
+nav {
+  width: 100px;
+  height: 100vh;
+  background-color: black
+}
+
+nav a {
+  display: block;
+  color: #fff
+}
+
+a.active {
+  color: palevioletred
+}
+
+main {
+  width: calc(100% - 100px);
+  display: flex
+}
+
 
 .App-logo {
   height: 40vmin;
@@ -32,6 +54,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
