--- a/react-ui/src/index.css
+++ b/react-ui/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#root {
+  display: flex
+}
+
+* {
+  padding: 0;
+  margin: 0;
+}
