--- a/react-ui/src/page/Menu/calcuBox.module.css
+++ b/react-ui/src/page/Menu/calcuBox.module.css
@@ -16,6 +16,7 @@
 
 .box {
     width: 70%;
+    max-width: 500px;
     min-height: 20vh;
     max-height: 70vh;
     /* overflow-y: scroll; */
@@ -28,6 +29,7 @@
     right: 100px;
     margin: auto
 }
-textarea.add{
+
+textarea.add {
     display: block
 }
