--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -11,7 +11,10 @@ nav {
 
 nav a {
   display: block;
-  color: #fff
+  color: #fff;
+  text-decoration: none;
+  padding: 20px 5px;
+
 }
 
 a.active {
